--- a/index.html
+++ b/index.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Welcome to Firebase Hosting</title>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- update the version number as needed -->
+    <script defer src="/__/firebase/9.10.0/firebase-app-compat.js"></script>
+    <!-- include only the Firebase features as you need -->
+    <script defer src="/__/firebase/9.10.0/firebase-auth-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-database-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-firestore-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-functions-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-messaging-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-storage-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-analytics-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-remote-config-compat.js"></script>
+    <script defer src="/__/firebase/9.10.0/firebase-performance-compat.js"></script>
+    <!-- 
+      initialize the SDK after all desired features are loaded, set useEmulator to false
+      to avoid connecting the SDK to running emulators.
+    -->
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 
-	<title>Gemstones</title>
 
 </head>
 <body>
+  <script type="text/javascript">
+    
+    window.location.href = "samples.html?page%3Arange%3Aabsorption-range-id=1.5&page%3Acolor-picker%3A&page%3Apicker%3Agem-cut-picker-id=CUSTOM%20CUT&page%3Arange%3Arefraction-range-id=2.5&page%3Atabs%3Aprojection-tabs-id=perspective&page%3Acheckbox%3Aauto-rotate-checkbox-id=true&page%3Atabs%3Alight-direction-tabs-id=downward&page%3Arange%3Ahead-shadow-range-id=1&page%3Arange%3Adispersion-range-id=0&page%3Arange%3Aray-depth-range-id=20&page%3Acolor-picker%3Abackground-color-picker-id=%23eeeeee&page%3Arange%3Acustom-cut-girdle-thickness-range-id=0.018&page%3Arange%3Acustom-cut-crown-ratio-range-id=0.48&page%3Arange%3Acustom-cut-crown-height-range-id=0.15&page%3Arange%3Acustom-cut-crown-table-range-id=0.555&page%3Arange%3Acustom-cut-girdle-roundness-range-id=1&page%3Arange%3Acustom-cut-pavillion-height-range-id=0.435";
 
-	<script type="text/javascript">
-		
-		window.location.href = "http://localhost/Javascript/vanillaJS/gemstones/samples.html?page%3Arange%3Aabsorption-range-id=1.5&page%3Acolor-picker%3Agem-color-picker-id=%23CFD3D9&page%3Apicker%3Agem-cut-picker-id=CUSTOM%20CUT&page%3Arange%3Arefraction-range-id=2.5&page%3Atabs%3Aprojection-tabs-id=perspective&page%3Acheckbox%3Aauto-rotate-checkbox-id=true&page%3Atabs%3Alight-direction-tabs-id=downward&page%3Arange%3Ahead-shadow-range-id=1&page%3Arange%3Adispersion-range-id=0&page%3Arange%3Aray-depth-range-id=20&page%3Acolor-picker%3Abackground-color-picker-id=%23111111&page%3Arange%3Acustom-cut-girdle-thickness-range-id=0.018&page%3Arange%3Acustom-cut-crown-ratio-range-id=0.48&page%3Arange%3Acustom-cut-crown-height-range-id=0.15&page%3Arange%3Acustom-cut-crown-table-range-id=0.555&page%3Arange%3Acustom-cut-girdle-roundness-range-id=1&page%3Arange%3Acustom-cut-pavillion-height-range-id=0.435";
-
-	</script>
-
+  </script>
 </body>
 </html>
